# summerpythons

./: README.md
notebooks/: madelbrot.ipynb  mobius.ipynb
projects/discordbot/: bot.py  db_init.sql  models.py  pyproject.toml
projects/justin/: README.md  console.py  flip.py  main.py  task.py  task_presets.json  window.py
student_work/: Nyle Copy_of_01_Class01_HW.ipynb
student_work/MichaelJ/: MJ_CalcClass_f.ipynb  Untitled3.ipynb
student_work/Nyle/: Copy_of_01_Class01_HW.ipynb
student_work/Rudy/: CHEMY.py  MultiOpCalcRPHW.ipynb  MultiOpCalculator.py  README.txt
student_work/allison/: INITIAL_(before_code_review)_Python_Academy_04Class_HW_Calculator.ipynb
student_work/eslin/: Calulator.ipynb
student_work/justin/: New_Calculator.ipynb
student_work/vaibhav/: 04Class_CalculatorSolution.ipynb  README.txt  calculator.py
